--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: npm install
+        run: npm install
 
       # Runs a single command using the runners shell
       - name: Build out the epub file
         run: npm run build-epub
 
-      - name: Run a multi-line script
+      - name: Save Artifact
         uses: actions/upload-artifact@v2
         with:
           name: The Better Way Epub
