--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-epub": "node epub-build.script.js"
+    "build-epub": "npx honkit epub ./ ./gitbook/the_better_way.epub && npx honkit epub ./ ./gitbook/the_better_way.mobi"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/ngMachina/the_better_way#readme",
   "dependencies": {
     "ebook-convert": "^2.0.1",
-    "gitbook-cli": "^2.3.2",
     "graceful-fs": "^4.2.6",
+    "honkit": "^3.6.20",
     "malta": "^4.1.28",
     "malta-epub": "^1.0.10"
   },
