--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-epub": "npx honkit epub ./ ./gitbook/the_better_way.epub && npx honkit epub ./ ./gitbook/the_better_way.mobi"
+    "build-epub": "npx honkit epub ./ ./the_better_way.epub && npx honkit mobi ./ ./the_better_way.mobi"
   },
   "repository": {
     "type": "git",
