need to spend additional time on my honkit fork to get better formatting, resolved issue with summary being blank causing no chapters to show, additionally resolve issue with failing build because of hint block

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ngMachina/the_better_way#readme",
   "dependencies": {
     "ebook-convert": "^2.0.1",
+    "gitbook-plugin-hints": "^1.0.2",
     "graceful-fs": "^4.2.6",
     "honkit": "^3.6.20",
     "malta": "^4.1.28",
