--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/ngMachina/the_better_way#readme",
   "dependencies": {
     "gitbook-plugin-hints": "^1.0.2",
+    "gitbook-plugin-image-captions": "^3.1.0",
+    "gitbook-plugin-summary": "^1.1.0",
     "honkit": "^3.6.20"
   },
   "devDependencies": {
